# multi-geo-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/vector/sylhet_upazilas_shp/: sylhet_upazilas.dbf  sylhet_upazilas.shp  sylhet_upazilas.shx
docs/: ARCHITECTURE.md  PAPER.md  ROADMAP.md
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json  tailwind.config.js  tsconfig.json
frontend/.angular/cache/21.2.14/georeasoner-frontend/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.config.ts
frontend/src/app/components/log-panel/: log-panel.component.ts
frontend/src/app/components/map-view/: map-view.component.ts
frontend/src/app/components/query-panel/: query-panel.component.ts
frontend/src/app/components/ranking-table/: ranking-table.component.ts
frontend/src/app/models/: types.ts
frontend/src/app/services/: app-state.service.ts  georeasoner.service.ts
georeasoner/: config.py  data_utils.py  db.py  graph.py  llm.py  report_writer.py  state.py
georeasoner/agents/: _utils.py  gis_analyst.py  hydrology.py  planner.py  reasoner.py  remote_sensing.py
georeasoner/api/: main.py
georeasoner/static/: index.html
georeasoner/templates/: report.html.j2
georeasoner/tools/: hydrology_ops.py  raster_ops.py  vector_ops.py
reports/: sylhet_fsi_ranking.csv
scripts/: fetch_data.py  run_sylhet_susceptibility.py
tests/: conftest.py  test_graph.py  test_hydrology_ops.py  test_phase4.py  test_raster_ops.py  test_smoke.py  test_vector_ops.py
(+1 files in other folders)
