[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "georeasoner"
version = "0.1.0"
description = "LLM-Orchestrated Multi-Agent Geospatial Reasoning System for Environmental Intelligence"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # LangGraph / LangChain (OpenAI-compatible for LM Studio)
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    # Geospatial core
    "geopandas>=1.0",
    "pyogrio>=0.9",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pyproj>=3.7",
    "osmnx>=2.0",
    "rtree>=1.2",
    # Data / storage
    "duckdb>=1.1",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    # Maps / reporting
    "folium>=0.17",
    "leafmap>=0.35",
    "plotly>=5.24",
    "weasyprint>=62",
    "jinja2>=3.1",
    "matplotlib>=3.9",
    # Utilities
    "httpx>=0.27",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "rich>=13.9",
    "typer>=0.12",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests>=2.32",
]

[tool.hatch.build.targets.wheel]
packages = ["georeasoner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
